# .github

./: .actrc  .ansible-lint  .gitignore  .mise.toml  LICENSE  README.md  ansible.cfg  eslint.config.js  justfile  mise.toml  nx.json  package.json  pyproject.toml  renovate.json  requirements.txt
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/: labels.yaml  secret-sync.yaml  stars.yaml
.github/actions/setup/: action.yaml
.github/actions/sync-stars-pull/: action.yaml  package.json
.github/actions/sync-stars-pull/src/: index.ts
.github/actions/sync-stars-push/: action.yaml  package.json
.github/actions/sync-stars-push/src/: index.ts
.github/actions/upsert-comment/: action.yaml
.github/workflows/: ansible-test.yml  ci.yaml  ci.yml  sync-files.yaml  sync-labels.yaml  sync-secrets.yaml  sync-stars.yaml  validate-workflows.yml  workflow-run-metrics.yml
ansible/: ansible.cfg  requirements.yml
ansible/config/: sync-files.yml  sync-tasks.yml
ansible/inventory/: example.vault.yml  production.yml
ansible/playbooks/: sync-files.yml  sync-workflows.yml
ansible/roles/file_sync/defaults/: main.yml
ansible/roles/file_sync/tasks/: delete_file.yml  (+3 more)
ansible/templates/: placeholder.txt
ansible/templates/workflows/: shared-ci.yml
docs/: file-sync.md  github-app-setup.md  local-testing.md  metrics-collection.md  stars-manager.md  troubleshooting.md
scripts/: validate-workflows.sh
stars_manager/: __init__.py  cli.py  github_api.py  models.py  utils.py
tests/: __init__.py  test_models.py  test_playbooks.py  test_utils.py  test_workflows.sh
(+13 files in other folders)
